Updated Помощь проекту! (markdown)

--- a/Помощь-проекту!.md
+++ b/Помощь-проекту!.md
@@ -1,6 +1,6 @@
 Если у Вас есть желание помочь развитию проекта, вот список того, что Вы можете сделать:
 
-- Сообщить о найденной ошибке
+- [Сообщить об ошибке](https://github.com/yupe/yupe/issues/new)
 
 - [Закажите](http://yupe.ru/feedback/contact) у нас разработку сайта на Yii И 25% от суммы работ пойдет на развитие Юпи!
 
