--- a/Помощь-проекту!.md
+++ b/Помощь-проекту!.md
@@ -1,4 +1,4 @@
-Если у Вас есть желание помочь развитию проекта, вот список того, что Вы можете сделать:
+Если у Вас есть желание помочь развитию проекта, вот список того, что Вы можно сделать:
 
 - [Сообщить об ошибке](https://github.com/yupe/yupe/issues/new)
 
@@ -8,4 +8,4 @@
 
 - В исходном коде многие места помечены маркером "@TODO" - можно эти "тудушки" закрывать и присылать патчи (а вообще можно присылать комментарии и патчи на любые участки кода)
 
-- Всегда можно поддержать нас морально, [написав письмо](http://yupe.ru/feedback/contact) или материально, отправив денежку вот на этот ЯД 41001846363811
+- Всегда можно поддержать нас морально, [написав письмо](http://yupe.ru/feedback/contact) или материально, отправив денежку вот на этот ЯД **41001846363811**
