Updated Помощь проекту! (markdown)

--- a/Помощь-проекту!.md
+++ b/Помощь-проекту!.md
@@ -1,4 +1,4 @@
-Если у Вас есть желание помочь развитию проекта, вот список того, что Вы можно сделать:
+Если у Вас есть желание помочь развитию проекта, вот список того, что можно сделать:
 
 - [Сообщить об ошибке](https://github.com/yupe/yupe/issues/new)
 
