Updated Установка (markdown)

--- a/Установка.md
+++ b/Установка.md
@@ -1,10 +1,9 @@
-
 # Общее
 
 1. [Скачать архив](https://github.com/yupe/yupe/archives/master)
 1. Распаковать его в каталог доступный веб-серверу (далее по тексту - yt)
 1. В файле index.php прописать корректный путь к фреймворку Yii
-1.      > $yii = dirname(__FILE__) . '/../Yii/framework/yii.php';
+     > $yii = dirname(__FILE__) . '/../Yii/framework/yii.php';
 1. Создать каталог /yt/protected/runtime и дать права на запись для веб-сервера
 1. Создать каталог /yt/assets и дать права на запись для веб-сервера
 
