--- a/Установка.md
+++ b/Установка.md
@@ -1,12 +1,18 @@
-# Общее
-
+# Перед установкой
 1. [Скачать архив](https://github.com/yupe/yupe/archives/master)
 1. Распаковать его в каталог доступный веб-серверу (далее по тексту - yt)
-1. В файле index.php прописать корректный путь к фреймворку Yii
-     > $yii = dirname(__FILE__) . '/../Yii/framework/yii.php';
+1. В файле index.php прописать корректный путь к фреймворку Yii (переменная $yii)
 1. Создать каталог /yt/protected/runtime и дать права на запись для веб-сервера
 1. Создать каталог /yt/assets и дать права на запись для веб-сервера
+1. Дать права на запись для файла /yt/protected/config/dbParams.php
 
 # Ручная установка
 
 # Автоматическая установка
+1. Запустить установщик http://localhost/yt/index.php/install
+1. Следовать инструкциям установщика
+
+# После установки
+1. Сообщать об ошибках и замечаниях
+2. Присылать патчи
+3. Рассказать друзьям о Юпи!
