Updated Общее (markdown)

--- a/Установка.md
+++ b/Установка.md
@@ -5,8 +5,10 @@
 1. Создать каталог /yt/protected/runtime и дать права на запись для веб-сервера
 1. Создать каталог /yt/assets и дать права на запись для веб-сервера
 1. Дать права на запись для файла /yt/protected/config/dbParams.php
+1. Создать базу данных для Юпи!
 
 # Ручная установка
+1. Через phpmyadmin (или что-то похожее) залить основной файл дампа (/yt/protected/modules/install/data/yupe.sql)https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe.sql
 
 # Автоматическая установка
 1. Запустить установщик http://localhost/yt/index.php/install
@@ -14,5 +16,7 @@
 
 # После установки
 1. Сообщать об ошибках и замечаниях
-2. Присылать патчи
-3. Рассказать друзьям о Юпи!
+1. Присылать патчи
+1. Разрабатывать модули
+1. Рассказать друзьям о Юпи!
+1. Отдыхать и наслаждаться жизнью!
