Updated Дизайн основного сайта (markdown)

--- a/Дизайн-основного-сайта.md
+++ b/Дизайн-основного-сайта.md
@@ -1,4 +1,4 @@
 Что скажите ?
 
-![Предварительный дизайн Юпи!](http://yupe.ru/yupe.png)
+![Предварительный дизайн Юпи!](http://yupe.ru/yupe_2.png)
 ![Предварительный дизайн Юпи!](http://yupe.ru/yupe_1.png)
