Updated Перед установкой (markdown)

--- a/Установка.md
+++ b/Установка.md
@@ -5,7 +5,7 @@
 1. В файле index.php прописать корректный путь к фреймворку Yii (самый первый пункт) (переменная $yii)
 1. Создать каталог /yt/protected/runtime и дать права на запись для веб-сервера
 1. Создать каталог /yt/assets и дать права на запись для веб-сервера
-1. Дать права на запись для файла /yt/protected/config/dbParams.php
+1. Дать права на запись для файла /yt/protected/config/db.php
 1. Создать базу данных для Юпи!
 
 # Ручная установка
