Updated Перед установкой (markdown)

--- a/Установка.md
+++ b/Установка.md
@@ -1,6 +1,6 @@
 # Перед установкой
-1. [Скачать фреймворк Yii](http://www.yiiframework.com/download/)
-1. [Скачать архив Юпи!](https://github.com/yupe/yupe/archives/master)
+1. [Скачать фреймворк Yii](http://www.yiiframework.com/download/) http://www.yiiframework.com/download/
+1. [Скачать архив Юпи!](https://github.com/yupe/yupe/archives/master) https://github.com/yupe/yupe/archives/master
 1. Распаковать его в каталог доступный веб-серверу (далее по тексту - yt)
 1. В файле index.php прописать корректный путь к фреймворку Yii (самый первый пункт) (переменная $yii)
 1. Создать каталог /yt/protected/runtime и дать права на запись для веб-сервера
