Updated Возможности (markdown)

--- a/Возможности.md
+++ b/Возможности.md
@@ -1,4 +1,4 @@
-**Из коробки Вы получаете каркас приложения, со следующим уже готовым функционалом:**
+**Из коробки Вы получаете каркас Yii-приложения, со следующим уже готовым функционалом:**
 
 * Регистрация, авторизация, восстановление пароля пользователя.
 * Регистрация и авторизация через социальные сети.
