--- a/Возможности.md
+++ b/Возможности.md
@@ -1,12 +1,12 @@
-**Из коробки Вы получаете каркас Yii-приложения, со следующим уже готовым функционалом:**
+**Из коробки Вы получаете каркас Yii-приложения, со следующим уже готовым функционалом (все разделено на модули - используйте только то, что необходимо):**
 
-* Регистрация, авторизация, восстановление пароля пользователя.
-* Регистрация и авторизация через социальные сети.
-* Управление пользователями через административный интерфейс.
+* Регистрация, авторизация, восстановление пароля пользователя (модуль user).
+* Регистрация и авторизация через социальные сети (модуль social).
+* Управление пользователями через административный интерфейс (модуль user).
 
-* Создание и публикация новостей
-* Создание и управление страницами сайта
-* Создание и управление категориями сайта (разделами)
-* Модуль простых комментариев (можно комментировать любую сущность)
-* Модуль для простого голосования (можно голосовать за любую сущность)
-* Модуль простых справочников (хранение и управление справочной информацией)
+* Создание и публикация новостей (модуль news)
+* Создание и управление страницами сайта (модуль page)
+* Создание и управление категориями сайта (разделами) (модуль category)
+* Модуль простых комментариев (можно комментировать любую сущность) (модуль comment)
+* Модуль для простого голосования (можно голосовать за любую сущность) (модуль vote)
+* Модуль простых справочников (хранение и управление справочной информацией) (модуль dictionary)
