Updated Помощь проекту! (markdown)

--- a/Помощь-проекту!.md
+++ b/Помощь-проекту!.md
@@ -4,7 +4,7 @@
 
 - [Закажите](http://yupe.ru/feedback/contact) у нас разработку сайта на Yii И 25% от суммы работ пойдет на развитие Юпи!
 
-- Нам очень сильно не хватает яркого и интересного дизайна для [сайта](http://yupe.ru/) =)
+- _Нам очень сильно не хватает яркого и интересного дизайна для [сайта](http://yupe.ru/) =)_
 
 - В исходном коде многие места помечены маркером "@TODO" - можно эти "тудушки" закрывать и присылать патчи (а вообще можно присылать комментарии и патчи на любые участки кода)
 
