Updated Стиль кодирования (markdown)

--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -10,12 +10,12 @@
 
 Для всех переменных нужно указывать тип префиксом
 
-o (object) - Для объектов
-a (array) - Для массивов
-s (string) - Для строк
-i (integer) - Для целочисленных
-f (float) - Для чисел с точкой
-m (multi) - Для переменных которые меняют свой тип
+* o (object) - Для объектов
+* a (array) - Для массивов
+* s (string) - Для строк
+* i (integer) - Для целочисленных
+* f (float) - Для чисел с точкой
+* m (multi) - Для переменных которые меняют свой тип
 
 	<?php
 		//это объект
