Updated Стиль кодирования (markdown)

--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -16,7 +16,10 @@
 * i (integer) - Для целочисленных
 * f (float) - Для чисел с точкой
 * m (multi) - Для переменных которые меняют свой тип
-*
+
+    
+Пример:
+
     <?php
 		//это объект
 		$oUser = new User();
