Updated Как подключиться к разработке (markdown)

--- a/Как-подключиться-к-разработке.md
+++ b/Как-подключиться-к-разработке.md
@@ -1,3 +1,4 @@
-@TODO Написать краткое и понятное описание как выбирать задание, как описывать баги (в соответствии с правилами тестирования), как писать код и делать реквесты
+@TODO Написать краткое и понятное описание как выбирать задание, как описывать баги (в соответствии с правилами тестирования), как писать код и делать реквесты.
+По правилам разработки - локализовать https://github.com/yiisoft/yii/wiki/Git-workflow-for-Yii-contributors
 
 [[Стиль кодирования]]
