Updated Стиль кодирования (markdown)

--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -16,6 +16,7 @@
 * i (integer) - Для целочисленных
 * f (float) - Для чисел с точкой
 * m (multi) - Для переменных которые меняют свой тип
+* r (resource) - mysql, curl, file
 
     
 Пример:
@@ -41,4 +42,19 @@
 	
 ### Обрамление кода
 
-@продолжу завтра 26.03.12 
+Обрамление кода всегда следует делать полными php-тегами
+
+    <?php
+    
+    ?>
+
+За исключением некоторых случаев в view:
+
+    //вывод строк 
+    <?= $sString ?>
+    //перебор массивов, условные операторы и прочее
+    <? foreach( $aUsers as $oUser ){ ?>
+
+    <? } else { ?>
+
+    <? } ?>
