Updated Стиль кодирования (markdown)

--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -8,7 +8,7 @@
 
 ### Указание типа переменных
 
-Для всех переменных нужно указывать тип префиксом
+Для всех переменных нужно указывать тип префиксом ( венгерская нотация )
 
 * o (object) - Для объектов
 * a (array) - Для массивов
@@ -40,21 +40,3 @@
 		$mParam = 15;
 	?>
 	
-### Обрамление кода
-
-Обрамление кода всегда следует делать полными php-тегами
-
-    <?php
-    
-    ?>
-
-За исключением некоторых случаев в view:
-
-    //вывод строк 
-    <?= $sString ?>
-    //перебор массивов, условные операторы и прочее
-    <? foreach( $aUsers as $oUser ){ ?>
-
-    <? } else { ?>
-
-    <? } ?>
