Updated Стиль кодирования (markdown)

--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -39,4 +39,59 @@
 		$mParam = '15поросят';
 		$mParam = 15;
 	?>
-	
+
+### Операторы
+**Условные конструкции**
+<?php
+if ($i == 0) {
+    /* много кода */
+} elseif ($i == 1) {
+    /* много кода */
+} else {
+    /* много кода */
+}
+
+if ($i == 0)
+    /* одна строчка кода */
+
+$var = ($i == 0) ? '' : '';
+$var = ($i == 0) 
+    ? 'длинная строчка'
+    : 'длинная строчка';
+switch ($i) {
+    case 0:
+        /* код */
+    break;
+    default:
+        /* код */
+}
+?>
+**Циклы**
+<?php
+for ($i == 0; $i < 5; $i++) {
+    /* код */
+}
+
+while ($i > 0) {
+    /* код */
+}
+
+do {
+    /* код */
+} while ($i > 0);
+
+foreach ($array as $key=>$value) {
+    /* код */
+}
+?>
+
+**Остальное**
+<?php
+$array = array('key'=>'value');
+
+$array = array(
+    'key1'=>'value1',
+    'key2'=>'value2',
+);
+
+?>
