Updated Стиль кодирования (markdown)

--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -40,7 +40,7 @@
 		$mParam = 15;
 	?>
 
-### Операторы
+### Оформление кода
 **Условные конструкции**
 
     <?php
@@ -98,3 +98,5 @@
         );
 
     ?>
+
+**ООП**
