подправил написание { для блоков...

--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -23,7 +23,7 @@
 
     <?php
 		//это объект
-		$oUser = new User();
+		$oUser = new User;
 		//это массив
 		$aUsers = array(1,2,3);
 		$aUsers = User::model()->findAll();
@@ -44,11 +44,16 @@
 **Условные конструкции**
 
     <?php
-        if ($i == 0) {
+        if ($i == 0)
+        {
             /* много кода */
-        } elseif ($i == 1) {
+        }
+        elseif ($i == 1)
+        {
             /* много кода */
-        } else {
+        }
+        else 
+        {
             /* много кода */
         }
 
@@ -59,7 +64,8 @@
         $var = ($i == 0) 
             ? 'длинная строчка'
             : 'длинная строчка';
-        switch ($i) {
+        switch ($i) 
+        {
             case 0:
                 /* код */
             break;
@@ -70,19 +76,23 @@
 **Циклы**
 
     <?php
-        for ($i == 0; $i < 5; $i++) {
+        for ($i == 0; $i < 5; $i++)
+        {
             /* код */
         }
 
-        while ($i > 0) {
+        while ($i > 0)
+        {
             /* код */
         }
 
-        do {
+        do 
+        {
             /* код */
         } while ($i > 0);
 
-        foreach ($array as $key=>$value) {
+        foreach ($array as $key=>$value)
+        {
             /* код */
         }
     ?>
