--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -10,6 +10,9 @@
 
 Для всех переменных нужно указывать тип префиксом ( венгерская нотация )
 
+ **ТАК ЛИ ЭТО НЕОБХОДИМО ?**
+** ИМХО, ЧИТАБЕЛЬНОСТИ НЕ ДОБАВЛЯЕТСЯ, А ВОТ ОБЯЗАННОСТЬ ПРОВЕРЯТЬ ИМЕНА ПЕРЕМЕННЫХ - ДА**
+
 * o (object) - Для объектов
 * a (array) - Для массивов
 * s (string) - Для строк
