Updated Как подключиться к разработке (markdown)

--- a/Как-подключиться-к-разработке.md
+++ b/Как-подключиться-к-разработке.md
@@ -2,3 +2,4 @@
 По правилам разработки - локализовать https://github.com/yiisoft/yii/wiki/Git-workflow-for-Yii-contributors
 
 [[Стиль кодирования]]
+[[Работа с eclipse]]
