Updated Стиль кодирования (markdown)

--- a/Стиль-кодирования.md
+++ b/Стиль-кодирования.md
@@ -94,7 +94,7 @@
             /* код */
         } while ($i > 0);
 
-        foreach ($array as $key=>$value)
+        foreach ($array as $key => $value)
         {
             /* код */
         }
@@ -103,13 +103,18 @@
 **Остальное**
 
     <?php
-        $array = array('key'=>'value');
+        $array = array('key' => 'value');
 
         $array = array(
-            'key1'=>'value1',
-            'key2'=>'value2',
+            'key1' => 'value1',
+            'key2' => 'value2',
         );
 
     ?>
 
 **ООП**
+
+    <?php
+        $obj = new Post;
+        $var = $obj->getMethod;
+    ?>
