Updated Какие задачи мне взять ? (markdown)

--- a/Какие-задачи-мне-взять-?.md
+++ b/Какие-задачи-мне-взять-?.md
@@ -1,1 +1,5 @@
-!!!
+Друзья, все задачи мы стараемся разбивать на версии (майлстоуны) в которых эти задачи должны быть решены.
+Список всех планируемых версий находится вот здесь https://github.com/yupe/yupe/issues/milestones.
+Если Вы хотите помочь в разработке Юпи! и не знаете с какой задачи начать - просто откройте список майлстоунов (https://github.com/yupe/yupe/issues/milestones), найдите тот, который имеет наименьший номер (сейчас это 0.0.4 https://github.com/yupe/yupe/issues/milestones) и берите любую задачу из него.
+
+Таким образом быстрее достигнем общей цели =)
