Updated Установка (markdown)

--- a/Установка.md
+++ b/Установка.md
@@ -14,7 +14,7 @@
 2. Выполнить скрипт https://github.com/yupe/yupe/blob/master/db/yupe_init.sql для создания учетной записи администратора (логин: admin@admin.ru, пароль: 123456)
 
 # Автоматическая установка
-1. Запустить установщик http://localhost/yt/index.php/install
+1. Запустить установщик http://localhost/yt/index.php/install/default/
 1. Следовать инструкциям установщика
 
 # После установки
