--- a/Установка.md
+++ b/Установка.md
@@ -1,20 +1,16 @@
 # Перед установкой
-1. [Скачать фреймворк Yii](http://www.yiiframework.com/download/) http://www.yiiframework.com/download/
-1. [Скачать архив Юпи!](https://github.com/yupe/yupe/archives/master) https://github.com/yupe/yupe/archives/master
-1. Распаковать его в каталог доступный веб-серверу (далее по тексту - yt)
-1. В файле index.php прописать корректный путь к фреймворку Yii (самый первый пункт) (переменная $yii)
-1. Создать каталог /yt/protected/runtime и дать права на запись для веб-сервера
-1. Создать каталог /yt/assets и дать права на запись для веб-сервера
-1. Создать каталог /yt/uploads/ и дать права на запись для веб-сервера
-1. Дать права на запись для файла /yt/protected/config/db.php
+1. [Скачать архив Юпи!](https://github.com/yupe/yupe/tarball/master) 
+1. Распаковать его в каталог доступный веб-серверу (далее по тексту - yupe)
+1. Создать каталог /yupe/uploads/ и дать права на запись для веб-сервера
+1. Дать права на запись для файла /yupe/protected/config/db.php
 1. Создать базу данных для Юпи!
 
 # Ручная установка
-1. Через phpmyadmin (или что-то похожее) залить основной файл дампа (/yt/protected/modules/install/data/yupe.sql) https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe.sql
+1. Через phpmyadmin (или что-то похожее) залить основной файл дампа (/yupe/protected/modules/install/data/yupe.sql) https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe.sql
 2. Выполнить скрипт https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe_init.sql для создания учетной записи администратора (логин: admin@admin.ru, пароль: 123456)
 
 # Автоматическая установка
-1. Запустить установщик http://localhost/yt/index.php/install/default/
+1. Запустить установщик http://localhost/yupe/index.php/install/default/
 1. Следовать инструкциям установщика
 
 # После установки
