--- a/Установка.md
+++ b/Установка.md
@@ -1,21 +1,20 @@
 # Перед установкой
 1. [Скачать архив Юпи!](https://github.com/yupe/yupe/tarball/master) 
 1. Распаковать его в каталог доступный веб-серверу (далее по тексту - yupe)
-1. Создать каталог /yupe/uploads/ и дать права на запись для веб-сервера
-1. Дать права на запись для файла /yupe/protected/config/db.php
+1. Скопировать db.example и создать /yupe/protected/config/db.php с правами на запись, настроив подключение
 1. Создать базу данных для Юпи!
-
-# Ручная установка
-1. Через phpmyadmin (или что-то похожее) залить основной файл дампа (/yupe/protected/modules/install/data/yupe.sql) https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe.sql
-2. Выполнить скрипт https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe_init.sql для создания учетной записи администратора (логин: admin@admin.ru, пароль: 123456)
 
 # Автоматическая установка
 1. Запустить установщик http://localhost/yupe/index.php/install/default/
 1. Следовать инструкциям установщика
 
+# Ручная установка (устаревшее)
+1. Через phpmyadmin (или что-то похожее) залить основной файл дампа (/yupe/protected/modules/install/data/yupe.sql) https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe.sql
+2. Выполнить скрипт https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe_init.sql для создания учетной записи администратора (логин: admin@admin.ru, пароль: 123456)
+
+
 # После установки
-1. Сообщать об ошибках и замечаниях
-1. Присылать патчи
-1. Разрабатывать модули
-1. Рассказать друзьям о Юпи!
+1. Сообщать об ошибках и замечаниях https://github.com/yupe/yupe/issues
+1. Присылать pull requests (патчи)
+1. Рассказать друзьям о Юпи! И Читать нас в твиттере https://twitter.com/YupeCms
 1. Отдыхать и наслаждаться жизнью!
