--- a/Установка.md
+++ b/Установка.md
@@ -11,7 +11,7 @@
 # Ручная установка (устаревшее)
 1. Через phpmyadmin (или что-то похожее) залить основной файл дампа (/yupe/protected/modules/install/data/yupe.sql) https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe.sql
 2. Выполнить скрипт https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe_init.sql для создания учетной записи администратора (логин: admin@admin.ru, пароль: 123456)
-
+3. Выполнить скрипт https://github.com/yupe/yupe/blob/master/protected/modules/install/data/db/yupe_menu.sql для вставки необходимых данных
 
 # После установки
 1. Сообщать об ошибках и замечаниях https://github.com/yupe/yupe/issues
