Updated Установка (markdown)

--- a/Установка.md
+++ b/Установка.md
@@ -8,7 +8,7 @@
 1. Запустить установщик http://localhost/yupe/index.php/install/default/
 1. Следовать инструкциям установщика
 
-# Ручная установка (устаревшее)
+# Ручная установка (не рекомендуется!)
 1. Через phpmyadmin (или что-то похожее) залить основной файл дампа (/yupe/protected/modules/install/data/yupe.sql) https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe.sql
 2. Выполнить скрипт https://github.com/yupe/yupe/blob/master/protected/modules/install/data/yupe_init.sql для создания учетной записи администратора (логин: admin@admin.ru, пароль: 123456)
 3. Выполнить скрипт https://github.com/yupe/yupe/blob/master/protected/modules/install/data/db/yupe_menu.sql для вставки необходимых данных
