--- a/Изготовление-баннеров.md
+++ b/Изготовление-баннеров.md
@@ -9,3 +9,5 @@
 основного сайта http://yiiframework.ru/forum/viewtopic.php?f=11&t=4846&p=30343#p30343 Упоминание на баннере
 
 фреймворка Yii только приветствуется, без него ничего не получилось бы =)
+
+Баннеры готовы http://yupe.ru/site/page/view/help можно размещать на своих сайтах и в блогах!
