--- a/Установка.md
+++ b/Установка.md
@@ -3,12 +3,11 @@
 ### Перед установкой
 1. [Скачать архив Юпи!](https://github.com/yupe/yupe/tarball/master) 
 1. Распаковать его в каталог доступный веб-серверу (далее по тексту - yupe)
-1. Скопировать /yupe/protected/config/db.example в /yupe/protected/config/db.php с правами на запись, настроив подключение
+1. Создать базу данных для Юпи - yupe
 1. Установить права на запись для папок /yupe/protected/runtime и /yupe/assets, если у Вас ОС, отличная от Windows
-1. Создать базу данных для Юпи!
 
 ### Автоматическая установка
-1. Запустить установщик http://localhost/yupe/index.php/install/default/
+1. Запустить установщик http://localhost/yupe/index.php/install
 1. Следовать инструкциям установщика
 
 ### После установки
