--- a/Установка.md
+++ b/Установка.md
@@ -2,12 +2,12 @@
 
 ### Перед установкой
 1. [Скачать архив Юпи!](https://github.com/yupe/yupe/tarball/master) 
-1. Распаковать его в каталог доступный веб-серверу (далее по тексту - yupe)
-1. Создать базу данных для Юпи - yupe
+1. Распаковать его в каталог доступный веб-серверу (далее по тексту - "yupe")
+1. Создать базу данных для Юпи - например "yupe"
 1. Установить права на запись для папок /yupe/protected/runtime и /yupe/assets, если у Вас ОС, отличная от Windows
 
 ### Автоматическая установка
-1. Запустить установщик http://localhost/yupe/index.php/install
+1. Открыть в веб-браузере страницу http://localhost/yupe/ (если у Вас Юпи установлен не в корень сайта, иначе просто - http://localhost/), http://localhost - использован в качестве примера.
 1. Следовать инструкциям установщика
 
 ### После установки
